# dynm

./: bump_version.sh  pyproject.toml  run_tests.sh  setup.cfg  setup_template.cfg
src/: algebra.py  analysis.py  dlm.py  dlm_autoregressive.py  dlm_nullmodel.py  dlm_transfer_function.py  update.py
src/dynm/: algebra.py  analysis.py  dlm.py  dlm_autoregressive.py  dlm_nullmodel.py  dlm_transfer_function.py  dynamic_model.py  filter.py  smooth.py  update.py  utils.py
src/dynm/model/: autoregressive.py  dlm.py  dlm_autoregressive.py  dlm_nullmodel.py  dlm_transfer_function.py  polynomial.py  regression.py  seasonal_fourier.py  transfer_function.py
src/dynm/sequencial/: analysis.py  filter.py  smooth.py
src/dynm/sub_model/: autoregressive.py  polynomial.py  regression.py  seasonal_fourier.py  transfer_function.py
src/dynm/superposition_block/: dlm.py  dnm.py
src/dynm/supperposition/: supperposition.py
src/dynm/utils/: algebra.py  format_input.py  format_result.py  validation.py
tests/: ar2.py  ar_trend.py  dlm_seas.py  run_tests.sh  test__multiple_tf.py  test__tf.py
unit_tests/: run_tests.sh  test__ar.py  test__ar_tf.py  test__dlm_seas.py  test__multiple_tf.py  test__tf.py
unittest/: run_tests.sh  test__AutoRegressive_TransferFunction.py  test__Autoregressive.py  test__Multiple_TransferFunction_PolyRatio.py  test__Multiple_TransferFuntion.py  test__Polynomial_Regression.py  test__Polynomial_Seasonal.py  test__TranferFunction.py  test__TransferFunction_PolyRatio.py  test__ar.py  test__ar_tf.py  test__dlm_seas.py  test__multiple_tf.py  test__tf.py
