[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dynm"
version = "0.0.3"
description = "Bayesian Dynamic Models"
authors = ["Eduardo Pinheiro and André Menezes"]
license = "OSI Approved :: Apache Software License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "1.3.3"
numpy = "1.19.5"
scipy = "1.7.1"
